# linkedlistc

./: .gitignore  CMakeLists.txt  README.md  makefile
app/: app.c
lib/: linkedlist.h
src/: linkedlist.c  linkedlist.h  main.c
